updates swaggers ui for verify, subscribe
